@@ -1,3 +1,8 @@
+2008-05-13  Vincent Untz  <vuntz@gnome.org>
+
+	* clock.c: (run_prefs_locations_add), (edit_tree_row): put the focus in
+	the name entry
+
 2008-05-09  Matthias Clasen  <mclasen@redhat.com>
 
 	* clock.c: Disable the "Set System Time" button when we
